--- a/templates/Kotlin.xml
+++ b/templates/Kotlin.xml
@@ -35,4 +35,9 @@
       <option name="KOTLIN_COMMENT" value="false" />
     </context>
   </template>
+  <template name="at" value="assert(true)&#10;" description="Assert(true) // for debugger stop" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="KOTLIN" value="true" />
+    </context>
+  </template>
 </templateSet>
